--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,12 @@ body {
    /* color: ; */
 }
 
-.conteudo {
+.conteudo {                                         /* Elemento pai do Section */
     margin-bottom: 40px;
     border-top: 0.4px solid #FFF2E7;
 }
 
-.conteudo-principal {
+.conteudo-principal {                      
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -84,5 +84,31 @@ body {
     /*height: ;*/
 }
 
+.conteudo-secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 40px;
+    border-bottom: 0.4px solid #FFF2E7;
+    padding-bottom: 45px;
 
+}
+
+.conteudo-secundario-titulo {
+   /* font-family: ; */
+   /* font-weight: ; */
+   /* font-size: ; */
+   /* color: ; */
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 40px;
+    margin-bottom: 10px;
+}
+
+.conteudo-secundario-paragrafo {
+   /* font-family: ; */
+   /* font-weight: ; */
+   /* font-size: ; */
+   /* color: ; */
+}
     
