--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
-.cabecalho {                                        /* Elemento pai do Navbar */
+.cabecalho {                                        /* Navbar */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -35,7 +35,12 @@ body {
     color: #FFF2E7;
 }
 
-.conteudo {                                         /* Elemento pai do Section */
+.cabecalho-menu-item:hover {
+    color: #30cfd0;
+}
+                                                    /* FIm do Navbar*/
+
+.conteudo {                                         /* Section */
     margin-bottom: 40px;
     border-top: 0.4px solid #FFF2E7;
 }
@@ -67,27 +72,9 @@ body {
     color: #FFF2E7;
 }
 
-.conteudo-principal-escrito-botao {
-    background-color: #30cfd0;
-    width: 170px;
-    height: 45px;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Sarala', sans-serif; 
-    font-weight: 400; 
-    font-size: 15px; 
-    color: #FFF2E7;
-
-}
-
-.conteudo-principal-escrito-botao:hover {
-    background-color: #4facfe;
-}
-
 .conteudo-principal-imagem {
-    height: 300px;
-    margin-top: 40px;
+    height: 250px;
+    margin: 40px;
 }
 
 .conteudo-secundario {
@@ -115,7 +102,7 @@ body {
     font-size: 16px; 
     color: #FFF2E7; 
 }
-
+                                                     /* Fim do Section*/
 .rodape {
     border-top: 0.4px solid #FFF2E7;
     padding: 30px;
@@ -126,4 +113,4 @@ body {
     display: block;
     margin: 0 auto;
 }
-    
+                                                    /* Fim do Footer*/
