--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,22 @@
 body {
     font-size: 100%;
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+      
 }
+
+body::-webkit-scrollbar {
+    width: 10px;              
+  }
+  
+  body::-webkit-scrollbar-track {
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #30cfd0;    
+    border-radius: 20px;       
+    border: 3px solid #330867;  
+  }
 
 .cabecalho {                                        /* Navbar */
     display: flex;
